--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -6,13 +6,20 @@ HomePage
 
 {% block main %}
 
-    <div class = "container-quote">
+<div class = "container-quote">
+    <div class = "text-focus-in" style = "color:#967E76">
+        <i class="material-icons" style="color: #FF8551;">&#xeb3b;</i>
+        <i class="material-icons" style="color: #FF8551;">&#xeb3b;</i>
+        <h5>{{random_quote}}</h5>
+    </div>
 
+    <div class="bottom-elements">
         <form action="/" method="post">
-            <input class = "quote" class="form-control mx-auto w-auto mt-20" autocomplete ="off" autofocus type="text" placeholder="Quote" name="quote">
-            <button type="submit" class="button btn btn-outline-primary" >Add</button>
+            <input class="quote form-control mx-auto" autocomplete="off" autofocus type="text" placeholder="Quote" name="quote">
+            <button type="submit" class="button btn btn-outline-primary">Add</button>
         </form>
     </div>
+</div>
 
 
 {% endblock %}
