--- a/project/templates/layout.html
+++ b/project/templates/layout.html
@@ -8,8 +8,14 @@
 
         <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" rel="stylesheet">
         <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"></script>
-
+        <script src="https://kit.fontawesome.com/86b3ad2d5a.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link href="/static/style.css" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
+
 
         <title>DuNo: {%block title %} {% endblock %}</title>
     </head>
@@ -18,19 +24,26 @@
 
             <nav class="bg-light border navbar navbar-expand-md navbar-light">
                 <div class="container-fluid" style="background: linear-gradient(to right, #FDFDBD, #F8C4B4, #FF8787, #F8C4B4, #FDFDBD);">
-                    <a class="navbar-brand" style="font-family:" href="/">✒<span class="blue">D</span><span class="red">u</span><span class="yellow">N</span><span class="green">o</span></a>
-                    <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbar">
-                        {% if session["user_id"]%}
-                        <ul class="navbar-nav me-auto mt-2">
-                            <li class="nav-item"><a class="nav-link" href="/quote">Your Quotes</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/">Settings</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/">Contacts</a></li>
-                        </ul>
-                        <ul class="navbar-nav ms-auto mt-2">
-                            <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
+                    <div class="navbar-nav me-auto ">
+                        <div class ="font-family: 'Ysabeau Infant', serif">
+                        <a class="navbar-brand" href="/"><i class="fa-solid fa-pen-to-square fa-bounce fa-xs " style="color: #fb3504;"></i><span class="blue"><b>D</b></span><span class="red"><b>u</b></span><span class="yellow"><b>N</b></span><span class="green"><b>o</b></span></a>
+                        </div>
+                    {% if session["user_id"] %}
+                        <li class="nav-item mt-2"><a class="nav-link" href="/quote">Your Quotes</a></li>
+                    </div>
+                        <ul class="navbar-nav">
+                        <ul class="navbar-nav ml-auto">
+                            <li class="nav-item dropdown btn-group dropstart">
+                                <button class="btn btn-outline-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <i class="fa-solid fa-gear fa-beat-fade" style="color: #f43e3e;"></i>
+                                </button>
+                                    <ul class="dropdown-menu" style = "background-color: #BFCCB5;">
+                                    <li><a class="dropdown-item" href="/general_settings">General</a></li>
+                                    <li><a class="dropdown-item" href="/account">Account</a></li>
+                                    <!--<li><a class="dropdown-item" href="/contact">Contact</a></li> -->
+                                    <li><a class="dropdown-item" href="/logout">Log out</a></li>
+                                </ul>
+                            </li>
                         </ul>
                         {% else %}
                         <ul class="navbar-nav ms-auto mt-2">
@@ -43,7 +56,7 @@
             </nav>
             {% if get_flashed_messages() %}
             <header>
-                <div class="alert alert-primary mb-0 text-center" role = "alert">
+                <div class="alert alert-danger mb-0 text-center" role = "alert">
                     {{get_flashed_messages()}}
                 </div>
             </header>
