--- a/project/templates/login.html
+++ b/project/templates/login.html
@@ -7,12 +7,11 @@ Login
     <div class = "container-quote">
 
         <form action = "/login" method = "post">
-            <input type="text" class="form-control mx-auto w-auto mt-20" placeholder = "Username" autocomplete= "off" autofocus name="username">
+            <input type="text" class="form-control mx-auto w-auto mt-20" placeholder = "Username" autocomplete= "off" autofocus name="username"><br />
             <input type="password" class="form-control mx-auto w-auto mt-20" placeholder = "Password" autocomplete= "off" name="password">
-            <button type="submit" class=" btn btn-outline-primary">Login</button>
+            <a class="link_forget_password" href="/forget" >Forget your password?</a><br /><br />
+            <button type="submit" class=" submit1 btn btn-outline-primary">Login</button><br /><br /><br />
         </form>
-
-
     </div>
 
 {% endblock %}
