--- a/project/templates/quote.html
+++ b/project/templates/quote.html
@@ -11,7 +11,6 @@ Your Quotes
                 <p class="quote-text">{{line.quote}}</p>
                 <div class="btn-group">
                     <button type="button" class="btn btn-outline-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                      ...
                     </button>
                     <ul class="dropdown-menu">
                       <li class="dropdown-item">
@@ -19,8 +18,8 @@ Your Quotes
                         <input type="hidden" name= "quote" value="{{line.quote}}">
                         <button type="submit" class="btn btn-outline_success">Edit</button>
                         </form>
-                    </li class="dropdown-item">
-                      <li>
+                    </li>
+                      <li  class="dropdown-item">
                         <form action="/delete" method ="post">
                         <input type="hidden" name= "quote" value="{{line.quote}}">
                         <button type="submit" class="btn btn-outline_success">Delete</button>
@@ -32,9 +31,13 @@ Your Quotes
             {% endfor %}
             <!-- Repeat for each quote -->
             <!-- ... -->
-            <form action="/send_email" method="post">
+
+            <!--
+              <form action="/send_email" method="post">
                 <button type="submit" class="button btn btn-outline-primary" >Send</button>
             </form>
+            -->
+
     </div>
     <script>
         function showMenu(elem) {
